Export adapted exercises (in development environment only) (#10)
